--- a/module_4_challenge.ipynb
+++ b/module_4_challenge.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "id": "e076f57f",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "4      195.10     108.17        46.43   20            1  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 98,
    "id": "71b9bbd2",
    "metadata": {},
    "outputs": [
@@ -226,19 +226,19 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# View the column names in the data\n",
-    "\n"
+    "df.columns\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 99,
    "id": "bc0f4172",
    "metadata": {},
    "outputs": [
@@ -397,67 +397,79 @@
        "max      846.270000     46.430000  3.958244e+06      9.000000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use the describe function to gather some basic statistics\n",
-    "\n"
+    "df.describe()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 117,
    "id": "b24b53cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Use this space to do any additional research\n",
     "# and familiarize yourself with the data.\n",
-    "\n"
+    "df.mean()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 101,
    "id": "551cb358",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "category\n",
        "consumables    23538\n",
        "furniture      11915\n",
        "software        8400\n",
-       "Name: category, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# What three item categories had the most entries?\n",
-    "\n"
+    "df['category'].value_counts().head(3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 102,
    "id": "5f54e2cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "subcategory\n",
        "bathroom supplies    6424\n",
-       "Name: subcategory, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,39 +477,40 @@
    "source": [
     "# For the category with the most entries,\n",
     "# which subcategory had the most entries?\n",
-    "\n"
+    "df[df['category'] == 'consumables']['subcategory'].value_counts().head(1) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 103,
    "id": "2db94379",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "client_id\n",
        "33615    220\n",
        "66037    211\n",
        "46820    209\n",
        "38378    207\n",
        "24741    207\n",
-       "Name: client_id, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Which five clients had the most entries in the data?\n",
-    "\n"
+    "df['client_id'].value_counts().head(5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 104,
    "id": "a6635601",
    "metadata": {},
    "outputs": [
@@ -507,19 +520,20 @@
        "[33615, 66037, 46820, 38378, 24741]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Store the client ids of those top 5 clients in a list.\n",
-    "\n"
+    "top_5_clients = df['client_id'].value_counts().head(5).index.tolist()\n",
+    "top_5_clients\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 105,
    "id": "c88b8a3e",
    "metadata": {},
    "outputs": [
@@ -529,7 +543,7 @@
        "64313"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +551,10 @@
    "source": [
     "# How many total units (the qty column) did the\n",
     "# client with the most entries order order?\n",
-    "\n"
+    "client_with_most_entries_id = top_5_clients[0]\n",
+    "client_data = df[df['client_id'] == client_with_most_entries_id]\n",
+    "total_units_ordered = client_data['qty'].sum()\n",
+    "total_units_ordered\n"
    ]
   },
   {
@@ -551,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 106,
    "id": "0c25c4a8",
    "metadata": {},
    "outputs": [
@@ -594,6 +611,24 @@
        "      <td>21</td>\n",
        "      <td>523.95</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13.52</td>\n",
+       "      <td>39</td>\n",
+       "      <td>527.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>36.42</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1056.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>195.10</td>\n",
+       "      <td>20</td>\n",
+       "      <td>3902.00</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -601,10 +636,13 @@
       "text/plain": [
        "   unit_price  qty  line_subtotal\n",
        "0     1096.80  105      115164.00\n",
-       "1       24.95   21         523.95"
+       "1       24.95   21         523.95\n",
+       "2       13.52   39         527.28\n",
+       "3       36.42   29        1056.18\n",
+       "4      195.10   20        3902.00"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,12 +651,14 @@
     "# Create a column that calculates the \n",
     "# subtotal for each line using the unit_price\n",
     "# and the qty\n",
+    "df['line_subtotal'] = df['unit_price'] * df['qty']\n",
+    "df[['unit_price', 'qty', 'line_subtotal']].head()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 107,
    "id": "ac9dafc8",
    "metadata": {},
    "outputs": [
@@ -686,7 +726,7 @@
        "2       13.52         1.68   39         65.52          458.64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,12 +736,14 @@
     "# Assume a shipping price of $7 per pound\n",
     "# for orders over 50 pounds and $10 per\n",
     "# pound for items 50 pounds or under.\n",
-    "\n"
+    "df['total_weight'] = df ['unit_weight'] * df['qty']\n",
+    "df['shipping_price'] = df['total_weight'].apply(lambda x: x * 7 if x > 50 else x * 10)\n",
+    "df[['unit_price','unit_weight','qty','total_weight','shipping_price']].head(3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 108,
    "id": "77f42c67",
    "metadata": {},
    "outputs": [
@@ -761,7 +803,7 @@
        "2         527.28          458.64     1077.12"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,12 +812,13 @@
     "# Create a column for the total price\n",
     "# using the subtotal and the shipping price\n",
     "# along with a sales tax of 9.25%\n",
-    "\n"
+    "df['line_price'] = round((df['line_subtotal'] + df['shipping_price']) * 1.0925,2) \n",
+    "df[['line_subtotal','shipping_price','line_price']].head(3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 118,
    "id": "c82ad275",
    "metadata": {},
    "outputs": [
@@ -930,7 +973,7 @@
        "[3 rows x 23 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,12 +983,13 @@
     "# of each line using unit cost, qty, and\n",
     "# shipping price (assume the shipping cost\n",
     "# is exactly what is charged to the client).\n",
-    "\n"
+    "df['line_cost'] = df['unit_cost'] * df['qty'] + df['shipping_price']\n",
+    "df.head(3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 119,
    "id": "e2389018",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1144,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1152,8 @@
    "source": [
     "# Create a column for the profit of\n",
     "# each line using line cost and line price\n",
-    "\n"
+    "df['line_profit'] = df['line_price'] - df['line_cost']\n",
+    "df.head(3)\n"
    ]
   },
   {
@@ -1128,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 125,
    "id": "c0e5d68e",
    "metadata": {},
    "outputs": [
@@ -1136,14 +1181,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Order 2742071 total: $152811.89\n",
-      "Order 2173913 total: $162388.71\n",
-      "Order 6128929 total: $923441.25\n"
+      "Order order_id total: $152811.89\n",
+      "Order order_id total: $162388.71\n",
+      "Order order_id total: $923441.25\n"
      ]
     }
    ],
    "source": [
-    "# Check your work using the totals above\n"
+    "# Check your work using the totals above\n",
+    "order_ids = [2742071, 2173913, 6128929]\n",
+    "for order_id in order_ids:\n",
+    "    calculated_total = df[df['order_id']==order_id]['line_price'].sum()\n",
+    "    print(f\"Order {'order_id'} total: ${calculated_total:.2f}\")"
    ]
   },
   {
@@ -1157,22 +1206,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 112,
    "id": "7c005f34",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "33615: $8377308.52\n",
-      "66037: $10259514.79\n",
-      "46820: $9743794.36\n",
-      "38378: $12906550.87\n",
-      "24741: $82268892.02\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# How much did each of the top 5 clients by quantity\n",
     "# spend? Check your work from Part 1 for client ids.\n",
@@ -1181,103 +1218,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 113,
    "id": "81b6e4d2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>client_id</th>\n",
-       "      <th>qty</th>\n",
-       "      <th>shipping_price</th>\n",
-       "      <th>line_price</th>\n",
-       "      <th>line_cost</th>\n",
-       "      <th>line_profit</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>24741</td>\n",
-       "      <td>239862</td>\n",
-       "      <td>5126448.37</td>\n",
-       "      <td>82268892.02</td>\n",
-       "      <td>45688899.71</td>\n",
-       "      <td>36579992.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>38378</td>\n",
-       "      <td>73667</td>\n",
-       "      <td>3429455.40</td>\n",
-       "      <td>12906550.87</td>\n",
-       "      <td>9634720.98</td>\n",
-       "      <td>3271829.89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>66037</td>\n",
-       "      <td>43018</td>\n",
-       "      <td>1395151.85</td>\n",
-       "      <td>10259514.79</td>\n",
-       "      <td>7004482.98</td>\n",
-       "      <td>3255031.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>46820</td>\n",
-       "      <td>75768</td>\n",
-       "      <td>1601448.84</td>\n",
-       "      <td>9743794.36</td>\n",
-       "      <td>7007191.64</td>\n",
-       "      <td>2736602.72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>33615</td>\n",
-       "      <td>64313</td>\n",
-       "      <td>1828984.89</td>\n",
-       "      <td>8377308.52</td>\n",
-       "      <td>6175313.91</td>\n",
-       "      <td>2201994.61</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   client_id     qty  shipping_price   line_price    line_cost  line_profit\n",
-       "4      24741  239862      5126448.37  82268892.02  45688899.71  36579992.31\n",
-       "3      38378   73667      3429455.40  12906550.87   9634720.98   3271829.89\n",
-       "1      66037   43018      1395151.85  10259514.79   7004482.98   3255031.81\n",
-       "2      46820   75768      1601448.84   9743794.36   7007191.64   2736602.72\n",
-       "0      33615   64313      1828984.89   8377308.52   6175313.91   2201994.61"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a summary DataFrame showing the totals for the\n",
     "# for the top 5 clients with the following information:\n",
@@ -1288,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 114,
    "id": "7be02867",
    "metadata": {},
    "outputs": [],
@@ -1301,103 +1245,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 115,
    "id": "8ead0986",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Client ID</th>\n",
-       "      <th>Units</th>\n",
-       "      <th>Shipping</th>\n",
-       "      <th>Total Revenue</th>\n",
-       "      <th>Total Cost</th>\n",
-       "      <th>Total Profit</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>24741</td>\n",
-       "      <td>239862</td>\n",
-       "      <td>$5.13M</td>\n",
-       "      <td>$82.27M</td>\n",
-       "      <td>$45.69M</td>\n",
-       "      <td>$36.58M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>38378</td>\n",
-       "      <td>73667</td>\n",
-       "      <td>$3.43M</td>\n",
-       "      <td>$12.91M</td>\n",
-       "      <td>$9.63M</td>\n",
-       "      <td>$3.27M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>66037</td>\n",
-       "      <td>43018</td>\n",
-       "      <td>$1.40M</td>\n",
-       "      <td>$10.26M</td>\n",
-       "      <td>$7.00M</td>\n",
-       "      <td>$3.26M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>46820</td>\n",
-       "      <td>75768</td>\n",
-       "      <td>$1.60M</td>\n",
-       "      <td>$9.74M</td>\n",
-       "      <td>$7.01M</td>\n",
-       "      <td>$2.74M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>33615</td>\n",
-       "      <td>64313</td>\n",
-       "      <td>$1.83M</td>\n",
-       "      <td>$8.38M</td>\n",
-       "      <td>$6.18M</td>\n",
-       "      <td>$2.20M</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Client ID   Units Shipping Total Revenue Total Cost Total Profit\n",
-       "4      24741  239862   $5.13M       $82.27M    $45.69M      $36.58M\n",
-       "3      38378   73667   $3.43M       $12.91M     $9.63M       $3.27M\n",
-       "1      66037   43018   $1.40M       $10.26M     $7.00M       $3.26M\n",
-       "2      46820   75768   $1.60M        $9.74M     $7.01M       $2.74M\n",
-       "0      33615   64313   $1.83M        $8.38M     $6.18M       $2.20M"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sort the updated data by \"Total Profit\" form highest to lowest\n"
    ]
@@ -1427,7 +1278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
