--- a/module_4_challenge.ipynb
+++ b/module_4_challenge.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 410,
    "id": "e076f57f",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "4      195.10     108.17        46.43   20            1  "
       ]
      },
-     "execution_count": 214,
+     "execution_count": 410,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 411,
    "id": "71b9bbd2",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 412,
    "id": "bc0f4172",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "max      846.270000     46.430000  3.958244e+06      9.000000  "
       ]
      },
-     "execution_count": 216,
+     "execution_count": 412,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 413,
    "id": "b24b53cc",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 414,
    "id": "551cb358",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 414,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 415,
    "id": "5f54e2cf",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 415,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 416,
    "id": "2db94379",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 416,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 417,
    "id": "a6635601",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
        "[33615, 66037, 46820, 38378, 24741]"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 417,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 418,
    "id": "c88b8a3e",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
        "64313"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 418,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 419,
    "id": "0c25c4a8",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
        "4      195.10   20        3902.00"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 419,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 420,
    "id": "ac9dafc8",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
        "2       13.52         1.68   39         65.52          458.64"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 420,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 421,
    "id": "77f42c67",
    "metadata": {},
    "outputs": [
@@ -841,7 +841,7 @@
        "2         527.28          458.64     1077.12"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 421,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 422,
    "id": "c82ad275",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1011,7 @@
        "[3 rows x 23 columns]"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 422,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 423,
    "id": "e2389018",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1182,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 423,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 424,
    "id": "c0e5d68e",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 425,
    "id": "7c005f34",
    "metadata": {},
    "outputs": [
@@ -1263,7 +1263,6 @@
    "source": [
     "# How much did each of the top 5 clients by quantity\n",
     "# spend? Check your work from Part 1 for client ids.\n",
-    "top_5_clients\n",
     "for client_id in top_5_clients:\n",
     "    calculated_total = df[df['client_id']==client_id]['line_price'].sum()\n",
     "    print(f\"Client {client_id} total: ${calculated_total:.2f}\")\n"
@@ -1271,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 426,
    "id": "81b6e4d2",
    "metadata": {},
    "outputs": [
@@ -1370,7 +1369,7 @@
        "1    2201994.61  "
       ]
      },
-     "execution_count": 210,
+     "execution_count": 426,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 427,
    "id": "7be02867",
    "metadata": {},
    "outputs": [
@@ -1490,7 +1489,7 @@
        "1      33615   64313   $1.83M        $8.38M     $6.18M       $2.20M"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 427,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1507,17 @@
     "    'total_profit': 'Total Profit'\n",
     "}, inplace=True)\n",
     "\n",
+    "\n",
+    "\n",
     "def format_currency_millions(value):\n",
+    "    \"\"\"\n",
+    "    Formats numerical fields to currency in millions of dollars.\n",
+    "\n",
+    "    Parameters:\n",
+    "    value (float): value to convert to millions of dollars\n",
+    "    Returns:\n",
+    "    str: value formated in currency in millions of dollars\n",
+    "    \"\"\"\n",
     "    return f\"${value/1000000:.2f}M\"\n",
     "\n",
     "columns_to_format = ['Shipping', 'Total Revenue', 'Total Cost', 'Total Profit']\n",
@@ -1520,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 428,
    "id": "8ead0986",
    "metadata": {},
    "outputs": [
@@ -1612,15 +1621,24 @@
        "1      33615   64313   $1.83M        $8.38M     $6.18M       $2.20M"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 428,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Sort the updated data by \"Total Profit\" form highest to lowest\n",
-    "summary_df.sort_values(by='Total Profit', ascending=False, inplace=True)  # Not necessary as we sorted previously but following directions\n",
-    "summary_df"
+    "summary_df.sort_values(by='Total Profit', ascending=False, inplace=True)  # Not necessary as we sorted previously but following directions, also not recommended as the value is now a string.\n",
+    "summary_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1187e263",
+   "metadata": {},
+   "source": [
+    "# Summary of Findings\n",
+    "The top 5 clients accounted for $48.05M in profit. Client 24741 accounted for approxiamatly 76% percent of that $48.05M with $36.58M in profit. The top 5 clients list was determined by taking the 5 customers with the most line items in the file. The data should be further explored to determine the top 5 customers by total profit, not just the clients who had the highest number of line items. "
    ]
   },
   {
